# rfc

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  test-plan.md  turbo.json  vercel.json
.claude/skills/orfc/: SKILL.md
.taste/: ARCHITECTURE.md  feedback.json
.taste/docs/: api.md  components.md  files.md  routing.md
apps/desktop/: CONTEXT.md  index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.example  .env.vercel  middleware.ts  next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: auth-bar.tsx  comment-sidebar.tsx  copy-block.tsx  copy-command.tsx  mermaid-block.tsx  plan-editor.tsx  plan-view.tsx  selection-popover.tsx  top-bar.tsx  version-history.tsx
apps/web/drizzle/: 0000_youthful_apocalypse.sql  0001_chubby_madelyne_pryor.sql  0002_large_gamora.sql  0003_legal_blacklash.sql
docs/cloud-sessions/: 01-introduction.md  02-architecture.md  03-authentication.md  04-lifecycle.md  05-persistence.md  06-scaling.md  07-security.md  08-observability.md  09-testing.md  10-deployment.md
examples/: handbook-single.html  html-demo.html
examples/handbook/: 00-index.html  01-architecture.html  02-api-reference.html  03-deployment.html  04-changelog.html
(+82 files in other folders)
