[package]
name = "orfc-desktop"
version = "0.1.0"
description = "orfc — minimal markdown editor with cloud sync"
authors = ["orfc"]
edition = "2021"

[lib]
name = "orfc_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
